# amail

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  Taskfile.yml  compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
alerts/: email-alerts.yml
app/: config.py  logging_config.py  main.py  metrics.py  security.py
app/contracts/: __init__.py  receiver.py  sender.py
app/models/: schemas.py
app/providers/: __init__.py
app/providers/resend/: __init__.py  receiver.py  sender.py
app/routes/: email.py  health.py  messages.py  webhook.py
app/services/: resend_client.py  templates.py
docs/: MONITORING.md
grafana/dashboards/: email-dashboard.json
prometheus/: prometheus.yml
templates/: notification.html  password_reset.html  two_factor.html  welcome.html  welcome_employee.html
tests/: conftest.py  test_receiver.py  test_routes.py  test_sender.py
